# opencv3.1.0_hisiv200_static_lib

./: CMakeLists.txt  README.md
hisiv200_complier_opencv3.1.0_lib/include/opencv2/: cvconfig.h  opencv.hpp~  opencv_modules.hpp
hisiv200_complier_opencv3.1.0_lib/lib/: libopencv_calib3d.so.3.1.0  libopencv_core.so.3.1.0  libopencv_features2d.so.3.1.0  libopencv_flann.so.3.1.0  libopencv_imgcodecs.so.3.1.0  libopencv_imgproc.so.3.1.0  libopencv_ml.so.3.1.0  libopencv_objdetect.so.3.1.0  libopencv_photo.so.3.1.0  libopencv_shape.so.3.1.0  libopencv_stitching.so.3.1.0  libopencv_superres.so.3.1.0  libopencv_video.so.3.1.0  libopencv_videostab.so.3.1.0
hisiv200_complier_opencv3.1.0_lib/lib/pkgconfig/: opencv.pc
hisiv200_complier_opencv3.1.0_lib/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: opencv_test.cpp
